Add facility_type request param to alt-fuelt-stations endpoints

--- a/source/docs/transportation/alt-fuel-stations-v1/_request_params_common2.html.md.erb
+++ b/source/docs/transportation/alt-fuel-stations-v1/_request_params_common2.html.md.erb
@@ -17,6 +17,7 @@
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_connector_type_operator") %>
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_power_kw_max") %>
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_power_kw_min") %>
+<%= partial("docs/transportation/alt-fuel-stations-v1/request_params/facility_type") %>
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/funding_sources") %>
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/hy_is_retail") %>
 <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/lpg_include_secondary") %>
