--- a/source/docs/transportation/alt-fuel-stations-v1/ev-charging-units.html.md.erb
+++ b/source/docs/transportation/alt-fuel-stations-v1/ev-charging-units.html.md.erb
@@ -40,6 +40,7 @@ The following query parameters may be passed in the request to control the outpu
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_network") %>
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_power_kw_max") %>
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/ev_power_kw_min") %>
+    <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/facility_type") %>
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/federal_agency") %>
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/limit") %>
     <%= partial("docs/transportation/alt-fuel-stations-v1/request_params/status") %>
